# pratimzakon

./: .gitignore  CLAUDE.md  README.md  agrolex_bridge.py  index.html  nn_scraper.py  pyproject.toml  render.yaml  requirements-dev.txt
.github/workflows/: backfill.yml  backfill_api.yml  cleanup_match_logs.yml  deploy-frontend.yml  deploy-pages.yml  enrich.yml  keep-alive.yml  scraper.yml  subscription_check.yml  weekly-digest.yml
arhiva/: nn_scraperv1.py  nn_scraperv2.py  pratimzakon.md
backend/: .env  .env.template  cleanup_match_logs.py  create_admin.py  migrate.py  requirements.txt  run.py  wsgi.py
backend/app/: agent.py  auth.py  database.py  main.py  migrate_db.py  models.py  schemas.py
backend/app/ai/: matcher.py
backend/app/email/: notifier.py
backend/app/jobs/: subscription_check.py  weekly_digest.py
backend/app/routers/: admin.py  auth.py  feed.py  keywords.py  push.py  search.py  stats.py  stripe_router.py
backend/app/scraper/: api_scraper.py  backfill.py  enrich.py  nn_api.py  nn_scraper.py
backend/app/tools/: definitions.py  executor.py
backend/app/utils/: stemmer.py
docs/: email-primjeri.md  mcp-toolbox.md  overview-one-pager.md  pricing-copy-lock.md  security-testing-plan.md
frontend/: aktivnost.html  arhiva.html  dashboard.html  diagram.html  index.html  moje-pracenje.html  privatnost.html  sazetak.html  search.html  statistika.html  stats.html  sw.js
infra/mcp-toolbox/: README.md  mcp.json.example  tools.yaml
tests/: test_bridge.py  test_subscription_check.py
