[project]
name = "nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dashboard = [
    "plotly>=6.5.0",
    "streamlit>=1.52.1",
]
analysis = [
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
